@@ -114,12 +114,12 @@ function simpleWriter() {
     
     function generateAttributeString(attributes) {
         return _.map(attributes, function(value, key) {
-            return util.format(' %s="%s"', key, escapeHtml(value));
+            return util.format(' %s="%s"', key, escapeHtmlAttribute(value));
         }).join("");
     }
     
     function text(value) {
-        fragments.push(escapeHtml(value));
+        fragments.push(escapeHtmlText(value));
     }
     
     function append(html) {
@@ -140,8 +140,14 @@ function simpleWriter() {
     };
 }
 
+function escapeHtmlText(value) {
+    return value
+        .replace(/&/g, '&amp;')
+        .replace(/</g, '&lt;')
+        .replace(/>/g, '&gt;');
+}
 
-function escapeHtml(value) {
+function escapeHtmlAttribute(value) {
     return value
         .replace(/&/g, '&amp;')
         .replace(/"/g, '&quot;')
