@@ -12,10 +12,22 @@ describe("HTML write", function() {
             "&lt;&gt;&amp;");
     });
     
+    test("double quotes outside of attributes are not escaped", function() {
+        assert.equal(
+            generateString(html.text('"')),
+            '"');
+    });
+    
     test("element attributes are HTML escaped", function() {
         assert.equal(
             generateString(html.freshElement("p", {"x": "<"})),
             '<p x="&lt;"></p>');
+    });
+    
+    test("double quotes inside attributes are escaped", function() {
+        assert.equal(
+            generateString(html.freshElement("p", {"x": '"'})),
+            '<p x="&quot;"></p>');
     });
     
     test("element children are written", function() {
